--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
 			<section id="tokenomics">
 				<h2>Tokenomics
-					<picture>
+<!-- 					<picture>
 						<source srcset="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f911/xWiRtBr5lytZ.webp" type="image/webp">
 						<img src="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f911/kz97STlcVQEV.gif" alt="🤑" width="80" height="80">
-					</picture>
+					</picture> -->
 				</h2>
 				<div class="section-full">
 					<div class="toke-box">
@@ -121,12 +121,12 @@
 
 			<section id="about">
 				<div class="section-column section-left">
-					<h2>About
+<!-- 					<h2>About
 						<picture>
 							<source srcset="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f438/swLDTe9twV7t.webp" type="image/webp">
 							<img src="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f438/qm7hdKiu1qqV.gif" alt="🐸" width="80" height="80">
 						</picture>
-					</h2>
+					</h2> -->
 					<p>Welcome to the world of Kek, where laughing at the chaos of the internet isn't just a pastime—it's a lifestyle. Born from the wild depths of meme culture, Kek represents the sacred art of embracing absurdity with a knowing grin. We’re not just surfing the web; we’re diving headfirst into its madness, summoning the ancient god of LOLs to guide us through. With Kek by our side, we laugh in the face of the unpredictable, because in this realm, chaos is the way—and laughter is our battle cry. This is Kek. This is the meme life.</p>
 				</div>
 				<div class="section-column section-right">
