--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</section>
 
 			<section id="tokenomics">
-				<h2>Tokenomics
+				<h2>Tokenomics 🤑
 <!-- 					<picture>
 						<source srcset="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f911/xWiRtBr5lytZ.webp" type="image/webp">
 						<img src="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f911/kz97STlcVQEV.gif" alt="🤑" width="80" height="80">
@@ -121,7 +121,7 @@
 
 			<section id="about">
 				<div class="section-column section-left">
-					<h2>About
+					<h2>About 🐸
 <!-- 						<picture>
 							<source srcset="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f438/swLDTe9twV7t.webp" type="image/webp">
 							<img src="../O0vUt10z2o1v.com/s/e/notoemoji/latest/1f438/qm7hdKiu1qqV.gif" alt="🐸" width="80" height="80">
